# TouhouInterpreter

./: CMakeLists.txt  NSEngine  README.md  eclConfig.h.in  hardcoded.json
assets/shaders/: blitFragmentShader  blitVertexShader  copyFragmentShader  copyVertexShader  fogFragmentShader  fogVertexShader
imgui/: imguiW.hpp
src/: AnmViewer.cpp  AnmViewer.hpp  App.cpp  App.hpp  AsciiManager.cpp  AsciiManager.hpp  AsciiPopupManager.cpp  AsciiPopupManager.hpp  Bomb.cpp  Bomb.hpp  Bullet.cpp  Bullet.h  BulletEx.cpp  BulletEx.h  BulletHandler.cpp  BulletHandler.h  BulletManager.cpp  BulletManager.h  BulletTable.cpp  BulletTable.h  EclContext.cpp  EclContext.h  EclFileManager.cpp  EclFileManager.h  EclInstrMacros.h  EclInstrs.cpp  EclRaw.cpp  EclRaw.h  EclVariables.cpp  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Fog.cpp  Fog.hpp  GlobalData.cpp  GlobalData.h  GoastManager.cpp  GoastManager.h  Gui.cpp  (+47 more)
src/Anm/: AnmBitflags.h  AnmFile.cpp  AnmFile.h  AnmFuncs.cpp  AnmInstrs.cpp  AnmManager.cpp  AnmManager.h  AnmRenderSettings.cpp  AnmShader.cpp  AnmShader.h  AnmSprite.h  AnmVM.cpp  AnmVM.h  AnmVariables.cpp  BlitShader.cpp  BlitShader.h  Camera.cpp  Camera.hpp  CopyShader.cpp  CopyShader.h  CopyTextures.cpp  CopyTextures.hpp  FogShader.cpp  FogShader.h  RenderVertex.cpp  RenderVertex.hpp  Text.cpp  anmOpener.cpp  anmOpener.h
src/AnmOpener/: AnmBitflags.h  AnmDraw.cpp  AnmFile.cpp  AnmFile.h  AnmFuncs.cpp  AnmFuncs.h  AnmInstrs.cpp  AnmLoaded.h  AnmManager.cpp  AnmManager.h  AnmManagerN.cpp  AnmManagerN.h  AnmShader.cpp  AnmShader.h  AnmSprite.h  AnmVM.cpp  AnmVM.h  AnmVariables.cpp  BlitShader.cpp  BlitShader.h  Camera.cpp  Camera.hpp  CopyShader.cpp  CopyShader.h  CopyTextures.cpp  CopyTextures.hpp  FogShader.cpp  FogShader.h  RenderVertex.hpp  Text.cpp  Text.hpp  anmOpener.cpp  anmOpener.h  anmTypes.h  anm_instrs_doc.org  build.mk  image.cpp  image.h
src/Bullet/: Bullet.cpp  Bullet.h  BulletEx.cpp  BulletEx.h  BulletHandler.cpp  BulletHandler.h  BulletManager.cpp  BulletManager.h
src/Ecl/: EclContext.cpp  EclContext.h  EclFileManager.cpp  EclFileManager.h  EclFuncs.cpp  EclFuncs.hpp  EclInstrMacros.h  EclInstrs.cpp  EclInstrs000.hpp  EclInstrs300.hpp  EclInstrs400.hpp  EclInstrs500.hpp  EclInstrs600.hpp  EclInstrs700.hpp  EclInstrs800.hpp  EclRaw.cpp  EclVariables.cpp  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h
src/EclInstrs/: EclFuncs.cpp  EclFuncs.hpp  EclInstrs000.cpart  EclInstrs000.hpp  EclInstrs300.cpart  EclInstrs300.hpp  EclInstrs400.cpart  EclInstrs400.hpp  EclInstrs500.cpart  EclInstrs500.hpp  EclInstrs600.cpart  EclInstrs600.hpp  EclInstrs700.cpart  EclInstrs700.hpp  EclInstrs800.cpart  EclInstrs800.hpp  instrs.thi  lexer.py  parser.py  touhouInstr.grammt
src/Laser/: Laser.cpp  Laser.h  LaserBeam.cpp  LaserBeam.h  LaserCurve.cpp  LaserCurve.h  LaserInfinite.cpp  LaserInfinite.h  LaserLine.cpp  LaserLine.h  LaserManager.cpp  LaserManager.h
src/Std/: Stage.cpp  Stage.hpp  stdOpener.h
src/StdOpener/: Stage.cpp  Stage.hpp  StdFile.cpp  StdFile.h  stdOpener.cpp  stdOpener.h
thi/: codeUtil.py  codegen.py  instrs.thi  instrs000.thi  instrs300.thi  instrs400.thi  instrs500.thi  instrs600.thi  instrs700.thi  instrs800.thi  lexer.py  macros.py  parseUtil.py  parser.py  test.cpp  touhouInstr.gramm  touhouInstr.grammt
